--- a/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
+++ b/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum Nova: Enhanced scalability with AnyTrust verification.'
-created: '2023-11-09T16:31:00.889Z'
+created: '2023-11-09T16:50:15.704Z'
 guideType: onboarding
 key: arbitrum-nova-arbitrum-university-144
 name: Arbitrum Nova
@@ -184,56 +184,55 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 7f2b25cc-5ddc-4386-a8bf-82e8ee18f826
-  - content: >+
-      ## What is a Data Availability Certificate (DACerts)
+  - content: >-
+      ## Sequencer-Committee Interaction
 
-      ### Sequencer Committe Interaction
-
-      ### Create Diagram 
-
-
+      Here's the step-by-step process detailing the interaction between the
+      Arbitrum sequencer and the Data Availability Committee during block
+      validation in the Arbitrum AnyTrust protocol:
 
 
+      ### Step 1:Batch Creation
+
+      The Arbitrum sequencer generates a data batch for submission and sets an
+      expiration time, typically three weeks ahead. The sequencer sends this
+      batch data along with the expiration time to all Committee members
+      simultaneously via an RPC (Remote Procedure Call) interface.
 
 
-      Data Availability Certificates (DACerts) are an essential component of
-      AnyTrust, a system that ensures the availability of data in a
-      decentralized network. A DACert serves as proof that a specific block's
-      data will be accessible from at least one honest Committee member until a
-      specified expiration time. It consists of a BLS aggregated signature,
-      which demonstrates that N-1 Committee members have signed the (hash,
-      expiration time) pair. By utilizing DACerts, AnyTrust enhances the
-      trustworthiness and availability of data in the decentralized network. It
-      provides a mechanism to ensure that data blocks can be accessed by at
-      least one honest Committee member, thereby increasing the reliability of
-      the system. DACerts offer a valuable solution for maintaining data
-      availability and integrity in decentralized environments.
+      ### Step 2: Data Storage by Committee Members
+
+      Each Committee member receives the batch and stores the data in its own
+      backing store, using the data’s hash as an index for future retrieval.
+      Committee members then sign the pair consisting of the data’s hash and the
+      expiration time using their individual BLS cryptographic keys.
 
 
-      #### How is it different from Nitro System? 
+      ### Step 3: DACert Creation
+
+      The Committee members send their signatures back to the sequencer. Each
+      returns a signature accompanied by an indicator of successful storage.
+      Once the sequencer receives the required number of signatures, it
+      aggregates them to form a Data Availability Certificate (DACert) for the
+      data batch.
 
 
-      In the traditional Nitro system, data blocks are posted on the L1 chain as
-      calldata, and their hashes are committed by the L1 Inbox contract. This
-      allows the data to be reliably read by L2 code. However, AnyTrust
-      introduces an additional option for the sequencer to post a data block on
-      L1: using a DACert to prove the availability of the data.
+      ### DACert Posting
+
+      The sequencer posts this DACert to the Layer 1 (L1) inbox contract. The
+      DACert is now available for the AnyTrust Layer 2 (L2) chain software,
+      which can validate the data's availability based on it. If the sequencer
+      cannot obtain the necessary signatures within a specified time frame, it
+      defaults to the traditional rollup method. It then posts the full data
+      directly to the L1 chain, bypassing the Committee. The L2 software is
+      designed to recognize both data formats—either provided through a DACert
+      or posted in full. It processes the data accordingly to continue the
+      chain’s operation seamlessly.
 
 
-      #### Verification of DACert
-
-
-      When a DACert is submitted to the L1 inbox contract, it undergoes
-      validation checks. The contract ensures that the DACert uses a valid
-      Keyset, while other aspects of DACert validity are verified by the L2
-      code. These checks include confirming that the number of signers meets the
-      requirements of the Keyset and that the expiration time is at least two
-      weeks after the current L2 timestamp. If a DACert is found to be invalid
-      during the validation process, the L2 code discards it and proceeds to the
-      next data block. However, if the DACert is valid, the L2 code reads the
-      associated data block, which is guaranteed to be available due to the
-      DACert's validity.
-
+      This process ensures that the AnyTrust protocol can validate blocks
+      efficiently while offering a contingency plan to maintain the chain's
+      integrity and continuity.
     name: How does it Work?
     stepItems: []
     uuid: 23e855d8-e3ff-49e3-bef2-9961ebefa48e
