--- a/src/guides/main/arbitrum-one-arbitrum-university-177.yaml
+++ b/src/guides/main/arbitrum-one-arbitrum-university-177.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum One: Unraveling the intricacies of Arbitrum Rollup'
-created: '2023-11-09T15:22:10.343Z'
+created: '2023-11-09T16:56:52.795Z'
 guideType: onboarding
 key: arbitrum-one-arbitrum-university-177
 name: Arbitrum One
@@ -349,6 +349,42 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 955c8d11-2337-4d99-8b73-c07e348d5167
+  - content: >
+      ## Differences between Arbitrum Nova (AnyTrust) and Arbitrum One (Rollup)
+
+
+      | Feature               | Arbitrum One
+      (Rollup)                                                        | Arbitrum
+      Nova (AnyTrust)                                               |
+
+      |-----------------------|------------------------------------------------------------------------------|------------------------------------------------------------------------|
+
+      | **Data Authenticity** | Layer 2 transaction data is posted on the
+      Ethereum blockchain.               | Uses AnyTrust technology with a Data
+      Availability Committee (DAC).     |
+
+      | **Trust Assumption**  | Trustless and permissionless, open for anyone to
+      validate.                   | Relies on at least two honest DAC members to
+      operate securely.         |
+
+      | **Gas Price**         | Minimum gas price is 0.1
+      gwei.                                               | Minimum gas price is
+      0.01 gwei, potentially 10x cheaper.               |
+
+      | **Scalability**       | Suitable for general use
+      cases.                                              | More scalable,
+      designed for high-load dApps like NFTs and social networks. |
+
+      | **DeFi Protocols**    | Higher TVL with major DeFi protocols like
+      Uniswap, Aave, and Curve.          | Lower TVL with a focus on gaming and
+      social, includes Sushi and others.   |
+
+      | **Transaction Costs** | Relatively higher due to full data posting on
+      Ethereum.                      | Lower costs due to only posting
+      certificates on Layer 1.               |
+    name: Arbitrum One vs Arbitrum Nova
+    stepItems: []
+    uuid: f6537833-a078-4afc-a156-ac54ae68b284
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
 uuid: arbitrum-one-arbitrum-university-177
