--- a/src/guides/main/arbitrum-orbit-arbitrum-university-525.yaml
+++ b/src/guides/main/arbitrum-orbit-arbitrum-university-525.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Exploring Arbitrum Orbit: The Next Frontier in Layer-2 Solutions'
-created: '2023-11-09T18:39:45.210Z'
+created: '2023-11-09T18:45:55.476Z'
 guideType: onboarding
 key: arbitrum-orbit-arbitrum-university-525
 name: Arbitrum Orbit
@@ -120,7 +120,57 @@ steps:
       L2 chain.
 
 
-      ## How (and when) to customize your Orbit chain's deployment configuration
+      ## How to customize your Orbit chain's deployment configuration?
+
+      To customize your Orbit chain's configuration, follow these steps when you
+      access the Orbit chain deployment portal:
+
+
+      ### Step1: Access the Deployment Portal
+
+      Navigate to the Orbit chain deployment portal where you'll launch your new
+      Orbit chain. You will encounter a form with various configuration fields.
+      This form typically comes with default values that are suitable for many
+      cases but can be customized.
+
+
+      ### Step 2: Update Information
+
+      For devnets, the Chain ID is automatically assigned and isn't crucial. In
+      production, you'll choose a unique integer identifier that hasn’t been
+      used on chain indexes like Chainlist.org. Enter a distinctive name for
+      your Orbit chain that is easily recognizable to your users and developers.
+
+
+      ### Step 3: Customise Specifications
+
+      Decide on the Challenge period in blocks, balancing the time validators
+      have to dispute states against the withdrawal delay for users. This is
+      measured in blocks of the underlying L1 chain. Specify the token for
+      validators to use as a stake, using the token's contract address on the L2
+      chain to which your Orbit chain settles, or use the address for ETH if
+      that's the chosen stake token. Set the Base stake amount, considering that
+      a lower stake lowers the barrier to entry but may increase vulnerability
+      to attacks, while a higher stake deters attacks but raises the barrier to
+      validator participation.
+
+
+      ### Step 4: Owner
+
+      Provide the account address that will own and manage the Orbit chain's
+      base contracts. In a production environment, this address might be
+      governed by a DAO or a multisig, but for a devnet, it can be a standard
+      Ethereum wallet address. Carefully review the default values and modify
+      them based on the needs and security considerations of your project. Once
+      you've finalized the configuration values, proceed with the deployment,
+      ensuring that the Owner address has sufficient ETH to cover gas costs for
+      contract deployment on L2.
+
+
+      By customizing these settings, you can tailor your Orbit chain to the
+      specific requirements of your application, balancing security,
+      participation, and administrative control according to your project's
+      needs.
     name: Orbit Ownership
     stepItems: []
     uuid: dc9130cc-0a1c-4d6c-8f47-06622f53d0ef
