--- a/src/guides/main/arbitrum-orbit-arbitrum-university-525.yaml
+++ b/src/guides/main/arbitrum-orbit-arbitrum-university-525.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Exploring Arbitrum Orbit: The Next Frontier in Layer-2 Solutions'
-created: '2023-11-09T18:45:55.476Z'
+created: '2023-11-10T11:03:00.972Z'
 guideType: onboarding
 key: arbitrum-orbit-arbitrum-university-525
 name: Arbitrum Orbit
@@ -24,7 +24,7 @@ steps:
       Ethereum's security features.
 
 
-      ## Problems Addressed by Orbit
+      ## Benefits of Orbit
 
       Arbitrum Orbit addresses several key challenges within the Ethereum
       ecosystem:
@@ -90,7 +90,7 @@ steps:
         uuid: a34afef3-148a-4e79-8f14-fe0aae2c90f7
         explanation: Explanation of the question
     uuid: 62a5e58f-54fa-45d3-ba27-92d8ab5f9a40
-  - content: >
+  - content: >-
       ## Orbit Licensing 
 
       The licensing for Arbitrum Orbit chains is designed to provide both
@@ -140,6 +140,11 @@ steps:
       production, you'll choose a unique integer identifier that hasn’t been
       used on chain indexes like Chainlist.org. Enter a distinctive name for
       your Orbit chain that is easily recognizable to your users and developers.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_orbit_arbitrum_university_525/1699614157534_screenshot_2023-11-10%20at%204.01.25%20pm.png"/>
+      </div>
 
 
       ### Step 3: Customise Specifications
