--- a/src/guides/main/arbitrum-orbit-arbitrum-university-525.yaml
+++ b/src/guides/main/arbitrum-orbit-arbitrum-university-525.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Exploring Arbitrum Orbit: The Next Frontier in Layer-2 Solutions'
-created: '2023-11-10T11:53:53.532Z'
+created: '2023-11-10T12:06:40.006Z'
 guideType: onboarding
 key: arbitrum-orbit-arbitrum-university-525
 name: Arbitrum Orbit
@@ -239,6 +239,11 @@ steps:
       base chain's contracts. Its private key is also auto-generated and stored
       in a JSON configuration file. After configuring this address, you proceed
       to the next deployment phase of your Orbit chain.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_orbit_arbitrum_university_525/1699617977164_screenshot_2023-11-10%20at%205.05.11%20pm.png"/>
+      </div>
 
 
       ### Step 4: Deploye Orbit Chain
