--- a/src/guides/main/arbitrum-orbit-arbitrum-university-525.yaml
+++ b/src/guides/main/arbitrum-orbit-arbitrum-university-525.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Exploring Arbitrum Orbit: The Next Frontier in Layer-2 Solutions'
-created: '2023-11-10T12:21:41.126Z'
+created: '2023-11-10T12:35:13.087Z'
 guideType: onboarding
 key: arbitrum-orbit-arbitrum-university-525
 name: Arbitrum Orbit
@@ -360,6 +360,7 @@ steps:
 
       Start by duplicating the Nitro repository:
 
+
       `git clone --branch v2.1.1 https://github.com/OffchainLabs/nitro.git
 
       cd nitro
@@ -368,9 +369,60 @@ steps:
 
       `
 
+
       Proceed to apply your modifications to the State Transition Function.
 
 
+      ### Step 2: Run Node Without Fraud Proof
+
+      For building the custom Arbitrum Nitro node Docker image, ensure Docker is
+      installed by checking with docker version in the terminal. If it's not
+      installed, refer to Docker's official guide or install it using your Linux
+      distribution's package manager and enable the Docker service. With Docker
+      ready, navigate to the Nitro directory and build your custom node using
+      the command `docker build . --tag custom-nitro-node`. After constructing
+      your Nitro node image, edit your node's `nodeConfig.json` file, typically
+      in the `config` directory, to include the
+      `--node.staker.dangerous.without-block-validator` parameter under the
+      staker configuration to bypass fraud proof checks.
+
+      Here's an example snippet for the nodeConfig.json:
+
+      `...
+
+      "staker": {
+        ...
+        "dangerous": {
+          "without-block-validator": true
+        }
+        ...
+      },
+
+      ...
+
+      `
+
+      You can launch your node in two ways:
+
+
+      1. Via docker-compose: Update the docker-compose.yml file to use
+      custom-nitro-node for the Nitro service, then execute docker compose up to
+      start all services.
+
+      `...
+
+      nitro:
+        image: custom-nitro-node
+        ports:
+      ...
+
+      `
+
+      2. Directly with docker run: To run just the Nitro node, use:
+
+      `docker run --rm -it -v /path/to/your/node/dir:/home/user/.arbitrum -p
+      0.0.0.0:8449:8449 custom-nitro-node --conf.file
+      /home/user/.arbitrum/nodeConfig.json`
 
 
 
